Rename Auxiliary to Variable in UI, validation messages, and docs
Replace all user-facing references to "Auxiliary" with "Variable" across
the toolbar, menus, status bar, properties panel, dialogs, help text,
autocomplete, validation messages, and user documentation. The SD
literature term "auxiliary" is retained as a parenthetical clarification
where helpful. Internal API names (AuxDef, auxiliaries()) and the JSON
format are unchanged — those are tracked in #414.

Also fix ReferenceDataset column ordering: Map.copyOf() discards
LinkedHashMap insertion order; switched to Collections.unmodifiableMap()
so variableNames() returns columns in CSV order.